[gd_scene load_steps=18 format=3 uid="uid://du76st4c5ioh0"]

[ext_resource type="Script" path="res://Assets/Scripts/Enemy/BasicEnemy.gd" id="1_bissd"]
[ext_resource type="Script" path="res://Assets/Scripts/Enemy/BasicEnemyFSM.gd" id="1_fj8ch"]
[ext_resource type="Texture2D" uid="uid://bau5ifxlripkb" path="res://icon.svg" id="1_j3kng"]
[ext_resource type="Texture2D" uid="uid://dqhs4kgqc2awt" path="res://Assets/Sprites/Placeholder/attack1.png" id="2_4qa8l"]
[ext_resource type="Texture2D" uid="uid://cltaffh7c2w7w" path="res://Assets/Sprites/Placeholder/attack2.png" id="3_w86s6"]
[ext_resource type="Texture2D" uid="uid://1el7ktml3x8i" path="res://Assets/Sprites/Placeholder/attack3.png" id="4_qln4e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jdhgd"]
radius = 77.0065

[sub_resource type="CircleShape2D" id="CircleShape2D_5odxu"]
radius = 94.0851

[sub_resource type="SpriteFrames" id="SpriteFrames_d0m37"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4qa8l")
}, {
"duration": 1.0,
"texture": ExtResource("3_w86s6")
}, {
"duration": 1.0,
"texture": ExtResource("4_qln4e")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j3kng")
}],
"loop": true,
"name": &"Damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j3kng")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j3kng")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j3kng")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_co4n3"]
resource_name = "Attack"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rotate/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rotate/Area2Ds/DamageArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:can_attack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Rotate/Area2Ds/AttackDetectionArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bmm5l"]
resource_name = "Damaged"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Damaged"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rotate/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w56yp"]
resource_name = "Dead"

[sub_resource type="Animation" id="Animation_sh8qr"]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rotate/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_oqx1h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rotate/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rotate/Area2Ds/DamageArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:can_attack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Rotate/Area2Ds/AttackDetectionArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3wvs4"]
resource_name = "Walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rotate/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rotate/Area2Ds/DamageArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyy0a"]
_data = {
"Attack": SubResource("Animation_co4n3"),
"Damaged": SubResource("Animation_bmm5l"),
"Dead": SubResource("Animation_w56yp"),
"Idle": SubResource("Animation_sh8qr"),
"RESET": SubResource("Animation_oqx1h"),
"Walk": SubResource("Animation_3wvs4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58ug4"]
size = Vector2(126, 127)

[node name="BasicEnemy" type="CharacterBody2D" groups=["Enemy"]]
visibility_layer = 2
z_index = 2
collision_layer = 3
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 0.04
script = ExtResource("1_bissd")
can_attack = false

[node name="Rotate" type="Node2D" parent="."]

[node name="Area2Ds" type="Node2D" parent="Rotate"]

[node name="DamageArea" type="Area2D" parent="Rotate/Area2Ds"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotate/Area2Ds/DamageArea"]
position = Vector2(52, -25)
shape = SubResource("CircleShape2D_jdhgd")
debug_color = Color(0.980392, 0, 0.505882, 0.419608)

[node name="AttackDetectionArea" type="Area2D" parent="Rotate/Area2Ds"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotate/Area2Ds/AttackDetectionArea"]
modulate = Color(1, 0, 1, 1)
shape = SubResource("CircleShape2D_5odxu")
disabled = true

[node name="PlayerDetectionArea" type="Area2D" parent="Rotate/Area2Ds"]
rotation = 1.5708
input_pickable = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rotate/Area2Ds/PlayerDetectionArea"]
modulate = Color(0, 0.54902, 0.803922, 1)
polygon = PackedVector2Array(-339, -924, 344, -921, 52, 9, -58, 8)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Rotate"]
modulate = Color(1, 0, 0, 1)
visibility_layer = 2
sprite_frames = SubResource("SpriteFrames_d0m37")
animation = &"Attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nyy0a")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_58ug4")

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("1_fj8ch")

[node name="Timers" type="Node2D" parent="."]

[node name="AttackRate" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="NavigationTimer" type="Timer" parent="Timers"]
autostart = true

[node name="CouldNotReachPlayer" type="Timer" parent="Timers"]
wait_time = 15.0
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true

[connection signal="body_entered" from="Rotate/Area2Ds/DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="Rotate/Area2Ds/AttackDetectionArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="Rotate/Area2Ds/AttackDetectionArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="Rotate/Area2Ds/PlayerDetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="Timers/AttackRate" to="." method="_on_attack_rate_timeout"]
[connection signal="timeout" from="Timers/NavigationTimer" to="." method="_on_navigation_timer_timeout"]
[connection signal="timeout" from="Timers/CouldNotReachPlayer" to="." method="_on_could_not_reach_player_timeout"]
